# forma-iac

./: .gitignore  justfile
ansible/: ansible.cfg  my.proxmox.yml  playbook.yml  pyproject.toml  vimrc
ansible/roles/haproxy/handlers/: main.yml
ansible/roles/haproxy/tasks/: main.yml
ansible/roles/haproxy/templates/: haproxy.cfg.j2
ansible/roles/nginx/tasks/: main.yml
terraform/: .terraform-docs.yml  README.md  haproxy.tf  nginx.tf  pools.tf  providers.tf  pve_nodes.tf  variables.tf
terraform/modules/rezoleo_lxc/: .terraform.lock.hcl  README.md  lxc.tf  outputs.tf  providers.tf  variables.tf
terraform/rezoleo_lxc/: .terraform.lock.hcl  lxc.tf  outputs.tf  providers.tf  variables.tf
