[project]
name = "ansible-iac"
version = "0.1.0"
description = ""
authors = [
    {name = "Thomas Gaudin",email = "thomas.gaudin@centraliens-lille.org"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible (>=11.5.0,<12.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ansible-lint = "^25.4.0"

